ruleta disenada por Heily

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="arriba">
         <h1>¡RULETA!</h1>
         <p>
-          para agregar nuevos valores precionar la ruleta y elimine o agrege
-          nuevas opciones
+          Para agregar nuevos valores presionar la ruleta y elimine o agregue
+          nuevas opciones.
         </p>
       </div>
       <div id="container">
